Fix setup to install package

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,10 @@ name = synapse-stats-exporter
 version = 1.0.0
 
 [options]
-packages = find:
+package_dir =
+    = src
+packages =
+    synapse_stats_exporter
 include_package_data = True
 install_requires =
     requests
