Use PostgreSQL instead of the API

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,8 @@ packages =
     synapse_stats_exporter
 include_package_data = True
 install_requires =
-    requests
     prometheus_client
+    psycopg2
 
 [options.entry_points]
 console_scripts =
